# FMSTPW

./: .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml
backend/fmstpw/: settings.py
backend/src/: manage.py  pyproject.toml
backend/src/fmstpw/: settings.py  urls.py  wsgi.py
